SSI includes are now being used for the headers of all pages at http://www.nmr-relax.com.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 
 <!--
-  Copyright (c) 2005-2006 Edward d'Auvergne.
+  Copyright (c) 2005-2012 Edward d'Auvergne.
   Permission is granted to copy, distribute and/or modify this document
   under the terms of the GNU Free Documentation License, Version 1.2
   or any later version published by the Free Software Foundation;
@@ -36,13 +36,8 @@
 
 <body>
 
-<div class="header_image">
-  <a href="http://www.nmr-relax.com" name="relax" type="image/png"><img src="relax_logo.png" alt="relax: dynamics analysis, model-free analysis, relaxation data, R1 and R2 exponential curve-fitting, steady-state NOE calculation, reduced spectral density mapping, N-state model, frame order dynamics theories, stereochemistry, conformational analysis, organic molecules, proteins, RNA, DNA, sugars, and other biomolecules." width="200" height="84" class="image"/></a>
-</div>
-
-<div class="header">
-  <p><strong>relax</strong> - Molecular dynamics by NMR data analysis</p>
-</div>
+<!-- SSI header -->
+<!--#include virtual="header.html" -->
 
 <!-- SSI side menu -->
 <!--#include virtual="menu.html" -->
