--- a/devel_platform.html
+++ b/devel_platform.html
@@ -14,24 +14,8 @@
 
 <head>
   <title>Setting up a development platform</title>
-  <meta name="AUTHOR" content="Edward d'Auvergne"/>
-  <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-  <meta name="Description" content="Software for dynamics analysis, model-free analysi, modelfree analysis, relaxation data, R1 and R2 exponential curve-fitting, steady-state NOE calculation, reduced spectral density mapping, N-state model, frame order dynamics theories, stereochemistry, conformational analysis, organic molecules, proteins, RNA, DNA, sugars, and other biomolecules." />
-  <link rel="stylesheet" type="text/css" href="relax.css"/>
-<script type="text/javascript">
-
-  var _gaq = _gaq || [];
-  _gaq.push(['_setAccount', 'UA-30096326-1']);
-  _gaq.push(['_setDomainName', 'nmr-relax.com']);
-  _gaq.push(['_trackPageview']);
-
-  (function() {
-    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-  })();
-
-</script>
+  <!-- SSI head element -->
+  <!--#include virtual="head.html" -->
 </head>
 
 <body>
