Fix for the sections menu on the http://www.nmr-relax.com/download.html page.
This was identified by the W3C Markup Validation Service (http://validator.w3.org/).

--- a/download.html
+++ b/download.html
@@ -33,7 +33,7 @@
     <h1>relax downloads</h1>
 
     <ul>
-    <li><a href="download.html#Current release">Current release</a></li>
+    <li><a href="download.html#Current release">Current release</a>
      <ul>
       <li><a href="download.html#GNU_Linux">GNU/Linux</a></li>
       <li><a href="download.html#MS_Windows">MS Windows</a></li>
