Fix for consistency_testing id tag in the http://www.nmr-relax.com/refs.html page.
This was identified by the W3C markup validation service (http://validator.w3.org/).

--- a/refs.html
+++ b/refs.html
@@ -87,7 +87,7 @@
     </ul>
   </div>
 
-  <div class="main_h2" id="consistency testing">
+  <div class="main_h2" id="consistency_testing">
    <h2>Consistency testing in relax</h2>
     <ul class="ref_ul">
      <li class="ref_li" id="Morin09"> Morin, S. and Gagn&eacute;, S. M. (2009). Simple tests for the validation of multiple field spin relaxation data. <em>J. Biomol. NMR</em>, <strong>45</strong>(4), 361-372.  (<a href="http://dx.doi.org/10.1007/s10858-009-9381-4">abstract</a>)</li>
