--- a/features.html
+++ b/features.html
@@ -44,13 +44,13 @@
 
   <div class="main_h2" id="theories">
    <h2>Supported NMR theories</h2>
-    <p>The following relaxation data analysis techniques are currently supported by relax:</p>
+    <p>The following NMR relaxation data analysis techniques are currently supported by relax:</p>
 
     <ul>
      <li>Model-free analysis (<a href="refs.html#LipariSzabo82a">Lipari and Szabo, 1982a</a>; <a href="refs.html#LipariSzabo82a">Lipari and Szabo, 1982b</a>; <a href="refs.html#Clore90">Clore et al., 1990</a>)</li>
      <li>Reduced spectral density mapping (<a href="refs.html#Farrow95">Farrow et al., 1995</a>, <a href="refs.html#Lefevre96">Lefevre et al., 1996</a>)</li>
-     <li>Consistency testing - the validation of multiple field relaxation data (<a href="refs.html#Morin09">Morin and Gagn&eacute;, 2009</a>)</li>
-     <li>Exponential curve fitting (to find the R<sub>1</sub> and R<sub>2</sub> relaxation rates)</li>
+     <li>Consistency testing - the validation of multiple field NMR relaxation data (<a href="refs.html#Morin09">Morin and Gagn&eacute;, 2009</a>)</li>
+     <li>Exponential curve fitting (to find the R<sub>1</sub> and R<sub>2</sub> NMR relaxation rates)</li>
      <li>Steady-state NOE calculation</li>
      <li>Determination of absolute stereochemistry of flexible molecules (using isotropic and anisotropic NMR parameters (NOE, ROE, and RDC) combined with MD simulation or simulated annealing, and ORD)</li>
      <li>The N-state model for investigating domain motions</li>
@@ -112,7 +112,7 @@ used as optimisation engines replacing the minimisation algorithms built into re
     <ul>
      <li>The prompt - this is the primary interface of relax.  Rather than reinventing a new command language, relax's interface is the powerful Python prompt.  This gives the power user full access to a proven programming language.</li>
      <li>Scripting - this provides a more powerful and flexible framework for controlling the program.  The script will be executed as Python code enabling advanced programming for automating data analysis.  All the features available within the prompt environment are accessible to the script.</li>
-     <li>Graphical User Interface (GUI) - this offers a simple and easy way of performing data analysis. Calculation of steady-state NOE, curve fitting of R<sub>1</sub> and R<sub>2</sub> relaxation rates as well as model-free analysis are supported. Most parameters used for analysis can be set manually, but system standards are set accoring to d'Auvergne and Gooley, 2008b. In addition, the graphical user interface has a fully automated model-free analysis feature that performs analysis without any user intervention after loading NOE, R<sub>1</sub> and R<sub>2</sub> data.</li>
+     <li>Graphical User Interface (GUI) - this offers a simple and easy way of performing data analysis. Calculation of steady-state NOE, curve fitting of R<sub>1</sub> and R<sub>2</sub> NMR relaxation rates as well as model-free analysis are supported. Most parameters used for analysis can be set manually, but system standards are set accoring to d'Auvergne and Gooley, 2008b. In addition, the graphical user interface has a fully automated model-free analysis feature that performs analysis without any user intervention after loading NOE, R<sub>1</sub> and R<sub>2</sub> data.</li>
     </ul>
 
     <p>To start relax with the graphical interface, start relax using: $ relax -g</p>
