--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
     <p>relax is a community driven project created by NMR spectroscopists for NMR spectroscopists.  It supports a diverse range of analyses:</p>
     <ul>
         <li>Model-free analysis - the Lipari and Szabo model-free analysis of NMR relaxation data.</li>
-        <li>R<sub>1</sub> and R<sub>2</sub> - the exponential curve fitting for the calculation of the R<sub>x</sub> relaxation rates.</li>
-        <li>NOE - the calculation of the steady-state NOE.</li>
-        <li>Consistency testing of multiple field relaxation data.</li>
+        <li>R<sub>1</sub> and R<sub>2</sub> - the exponential curve fitting for the calculation of the R<sub>x</sub> NMR relaxation rates.</li>
+        <li>NOE - the calculation of the steady-state NOE NMR relaxation data.</li>
+        <li>Consistency testing of multiple field NMR relaxation data.</li>
         <li>RSDM - Reduced Spectral Density Mapping.</li>
         <li>Frame order and N-state model - study of domain motions via the N-state model and frame order dynamics theories using anisotropic NMR parameters such as RDCs and PCSs.</li>
         <li>Stereochemistry investigations.</li>
