Updated all the HTML page titles of http://www.nmr-relax.com to include the name relax.
This is so the search engine links will include 'relax' as part of the link name.

--- a/communication.html
+++ b/communication.html
@@ -13,7 +13,7 @@
 -->
 
 <head>
-  <title>Communications (bug tracker and mailing lists)</title>
+  <title>relax communications - the bug tracker and mailing lists</title>
   <!-- SSI head element -->
   <!--#include virtual="head.html" -->
 </head>
