--- a/devel_platform.html
+++ b/devel_platform.html
@@ -13,7 +13,7 @@
 -->
 
 <head>
-  <title>Setting up a development platform</title>
+  <title>relax development platform setup</title>
   <!-- SSI head element -->
   <!--#include virtual="head.html" -->
 </head>
