--- a/docs.html
+++ b/docs.html
@@ -13,7 +13,7 @@
 -->
 
 <head>
-  <title>Documentation</title>
+  <title>relax documentation</title>
   <!-- SSI head element -->
   <!--#include virtual="head.html" -->
 </head>
