--- a/events.html
+++ b/events.html
@@ -14,7 +14,7 @@
 -->
 
 <head>
-  <title>Events</title>
+  <title>relax events</title>
   <!-- SSI head element -->
   <!--#include virtual="head.html" -->
 </head>
