--- a/faq.html
+++ b/faq.html
@@ -13,7 +13,7 @@
 -->
 
 <head>
-  <title>Frequently asked questions (FAQ)</title>
+  <title>relax frequently asked questions (FAQ)</title>
   <!-- SSI head element -->
   <!--#include virtual="head.html" -->
 </head>
