--- a/features.html
+++ b/features.html
@@ -14,7 +14,7 @@
 -->
 
 <head>
-  <title>Program features - Model-free, RMSD, R1, R2, NOE, Consistency testing, Frame order, N-state model</title>
+  <title>relax features - Model-free, RMSD, R1, R2, NOE, Consistency testing, Frame order, N-state model</title>
   <!-- SSI head element -->
   <!--#include virtual="head.html" -->
 </head>
