--- a/links.html
+++ b/links.html
@@ -13,7 +13,7 @@
 -->
 
 <head>
-  <title>Links</title>
+  <title>relax links</title>
   <!-- SSI head element -->
   <!--#include virtual="head.html" -->
 </head>
