--- a/windows_devel.html
+++ b/windows_devel.html
@@ -13,7 +13,7 @@
 -->
 
 <head>
-  <title>MS Windows development platform</title>
+  <title>MS Windows development platform for relax</title>
   <!-- SSI head element -->
   <!--#include virtual="head.html" -->
 </head>
