--- a/download.html
+++ b/download.html
@@ -14,7 +14,7 @@
 -->
 
 <head>
-  <title>Downloads</title>
+  <title>relax downloads</title>
   <!-- SSI head element -->
   <!--#include virtual="head.html" -->
 </head>
