--- a/refs.html
+++ b/refs.html
@@ -14,7 +14,7 @@
 -->
 
 <head>
-  <title>References</title>
+  <title>relax references</title>
   <!-- SSI head element -->
   <!--#include virtual="head.html" -->
 </head>
