Activated the FAQ for http://nmr-relax.com.
This page is now included in the side menu and has two entries for subversion usage.

--- a/menu.html
+++ b/menu.html
@@ -13,6 +13,7 @@
     <li class="menu_def"><a href="links.html" title="Where to find relax on the web">Links</a></li>
     <li class="menu_def"><a href="api/" title="The relax internals">API documentation</a></li>
     <li class="menu_def"><a href="devel_platform.html" title="Setting up a development platform">Development platform setup</a></li>
+    <li class="menu_def"><a href="faq.html" title="FAQ">relax FAQ</a></li>
 
     <li class="menu_title">relax @ Gna!</li>
     <li class="menu_def"><a href="http://gna.org/projects/relax" title="The Gna! site for the project relax.">The relax project</a></li>
