--- a/faq.html
+++ b/faq.html
@@ -30,6 +30,24 @@
   <div class="main_box">
     <h1>Frequently Asked Questions (FAQ)</h1>
 
+     <h3>How do I obtain the newest relax source code?</h3>
+
+      <p>To obtain the most up to date copy of the relax source code without waiting for a new release, the new code can be checked out from the repository by typing:</p>
+      <p><em>$ svn co svn://svn.gna.org/svn/relax/1.3 relax-1.3</em></p>
+      <p>or if this doesn't work:</p>
+      <p><em>$ svn co http://svn.gna.org/svn/relax/1.3 relax-1.3</em></p>
+      <p>If you already have a checked out copy, try typing:</p>
+      <p><em>$ svn up</em></p>
+      <p>This requires installation of the <a href="http://subversion.tigris.org/">subversion program</a>.  If the fitting of the R<sub>1</sub> and R<sub>2</sub> NMR relaxation rates is required, the relaxation curve-fitting C modules will need to be compiled using <a href='http://www.scons.org/'>SCons</a>.  For more information, see the compilation subsection of the <a href="http://www.nmr-relax.com/download.html#Source_code_repository">relax downloads</a> page.</p>
+
+     <h3>How do I check out a relax source code branch?</h3>
+
+      <p>Sometimes code for new analyses or a new feature is developed within a dedicated branch within the <a href="http://svn.gna.org/viewcvs/relax/">relax repository</a>.  To obtain, for example, the <em>relax_disp</em> relax branch, type:</p>
+      <p><em>$ svn co svn://svn.gna.org/svn/relax/relax_disp</em></p>
+      <p>or:</p>
+      <p><em>$ svn co http://svn.gna.org/svn/relax/relax_disp</em></p>
+      <p>This will create the directory <em>relax_disp</em> containing the source code of the branch.</p>
+
   </div>
 
 </div>
