Expansion and modification of the <head> element of all http://www.nmr-relax.com pages.

--- a/head.html
+++ b/head.html
@@ -1,8 +1,13 @@
-  <meta name="AUTHOR" content="Edward d'Auvergne"/>
+  <meta name="author" content="Edward d'Auvergne"/>
+  <meta name="description" content="Software for dynamics analysis, NMR relaxation, model-free analysis, modelfree analysis, relaxation data, R1 and R2 exponential curve-fitting, steady-state NOE calculation, reduced spectral density mapping, N-state model, frame order dynamics theories, stereochemistry, conformational analysis, organic molecules, proteins, RNA, DNA, sugars, and other biomolecules." />
+  <meta name="keywords" content="Software for dynamics analysis, NMR relaxation, model-free analysis, modelfree analysis, relaxation data, R1 and R2 exponential curve-fitting, steady-state NOE calculation, reduced spectral density mapping, N-state model, frame order dynamics theories, stereochemistry, conformational analysis, organic molecules, proteins, RNA, DNA, sugars, biomolecules." />
+
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-  <meta name="Description" content="Software for dynamics analysis, NMR relaxation, model-free analysis, modelfree analysis, relaxation data, R1 and R2 exponential curve-fitting, steady-state NOE calculation, reduced spectral density mapping, N-state model, frame order dynamics theories, stereochemistry, conformational analysis, organic molecules, proteins, RNA, DNA, sugars, and other biomolecules." />
+
+  <!--relax css-->
   <link rel="stylesheet" type="text/css" href="relax.css"/>
 
+  <!--Google analytics JS-->
   <script type="text/javascript">
 
     var _gaq = _gaq || [];
