Fix for <img> tags requiring the 'alt' attribute on the page http://www.nmr-relax.com/features.html.
This was identified by the W3C markup validation service (http://validator.w3.org/).

--- a/features.html
+++ b/features.html
@@ -118,9 +118,9 @@ used as optimisation engines replacing the minimisation algorithms built into re
     <p>To start relax with the graphical interface, start relax using: $ relax -g</p>
     <p>relaxGUI: a new software for fast and simple NMR relaxation data analysis and calculation of ps-ns and μs motion of proteins., Bieri M, d'Auvergne EJ, Gooley PR., J Biomol NMR, 2011</p>
     <p>Screenshots running on Ubuntu 11.04:</p>
-    <img src="images/gui/gui_modelfree.png" /> Model-free analysis interface
-    <img src="images/gui/gui_Rx.png" /> Relaxation-rate curve fitting interface
-    <img src="images/gui/gui_NOE.png" /> Steady-state NOE calculation interface
+    <img src="images/gui/gui_modelfree.png" alt="Model-free tab of the relax GUI."/> Model-free analysis interface
+    <img src="images/gui/gui_Rx.png" alt="Relaxation curve-fitting tab of the relax GUI."/> Relaxation rate curve-fitting interface
+    <img src="images/gui/gui_NOE.png" alt="Steady-state NOE tab of the relax GUI."/> Steady-state NOE calculation interface
   </div>
 
  </div>
