Fix for the "Current release" id attribute on the http://www.nmr-relax.com/download.html page.
This was identified by the W3C markup validation service (http://validator.w3.org/).

--- a/download.html
+++ b/download.html
@@ -33,7 +33,7 @@
     <h1>relax downloads</h1>
 
     <ul>
-    <li><a href="download.html#Current release">Current release</a>
+    <li><a href="download.html#Current_release">Current release</a>
      <ul>
       <li><a href="download.html#GNU_Linux">GNU/Linux</a></li>
       <li><a href="download.html#MS_Windows">MS Windows</a></li>
@@ -49,7 +49,7 @@
 
 
 <!-- Current release -->
-  <div id="Current release" class="main_box">
+  <div id="Current_release" class="main_box">
     <h1>Current release</h1>
 
       <p>The current stable release is relax version 1.3.13.</p>
