Shifted the SSI comments into the SSI HTML elements for all http://www.nmr-relax.com pages.

--- a/head.html
+++ b/head.html
@@ -1,3 +1,4 @@
+<!-- SSI head element -->
   <meta name="author" content="Edward d'Auvergne"/>
   <meta name="description" content="Software for dynamics analysis, NMR relaxation, model-free analysis, modelfree analysis, relaxation data, R1 and R2 exponential curve-fitting, steady-state NOE calculation, reduced spectral density mapping, N-state model, frame order dynamics theories, stereochemistry, conformational analysis, organic molecules, proteins, RNA, DNA, sugars, and other biomolecules." />
   <meta name="keywords" content="Software for dynamics analysis, NMR relaxation, model-free analysis, modelfree analysis, relaxation data, R1 and R2 exponential curve-fitting, steady-state NOE calculation, reduced spectral density mapping, N-state model, frame order dynamics theories, stereochemistry, conformational analysis, organic molecules, proteins, RNA, DNA, sugars, biomolecules." />
@@ -22,3 +23,4 @@
     })();
 
   </script>
+  <!-- End SSI head element -->
