--- a/menu.html
+++ b/menu.html
@@ -1,3 +1,4 @@
+<!-- SSI side menu -->
 <div class="menu">
   <ul class="menu_ul">
     <li class="menu_header">The relax menu</li>
@@ -28,3 +29,4 @@
 
   </ul>
 </div>
+<!-- End SSI side menu -->
