--- a/footer.html
+++ b/footer.html
@@ -1,3 +1,4 @@
+<!-- SSI footer -->
 <div class="clear"></div>
 
 <div class="footer">
@@ -5,3 +6,4 @@
  <div class="footer_right">Hosted by <a href="http://gna.org/">Gna!</a></div>
  <div class="clear"></div>
 </div>
+<!-- End SSI footer -->
