--- a/header.html
+++ b/header.html
@@ -1,3 +1,4 @@
+<!-- SSI header -->
 <div class="header_image">
   <a href="http://www.nmr-relax.com" name="relax" type="image/png"><img src="relax_logo.png" alt="relax: dynamics analysis, model-free analysis, relaxation data, R1 and R2 exponential curve-fitting, steady-state NOE calculation, reduced spectral density mapping, N-state model, frame order dynamics theories, stereochemistry, conformational analysis, organic molecules, proteins, RNA, DNA, sugars, and other biomolecules." width="200" height="84" class="image"/></a>
 </div>
@@ -5,3 +6,4 @@
 <div class="header">
   <p><strong>relax</strong> - Molecular dynamics by NMR data analysis</p>
 </div>
+<!-- End SSI header -->
