--- a/header.html
+++ b/header.html
@@ -4,6 +4,7 @@
 </div>
 
 <div class="header">
-  <p><strong>relax</strong> - Molecular dynamics by NMR data analysis</p>
+  <p id="headline"><strong>relax</strong> - Molecular dynamics by NMR data analysis</p>
+  <p id="tagline">Supported analyses: Model-free, NMR relaxation (R<sub>1</sub>, R<sub>2</sub>, NOE), reduced spectral density mapping, N-state models, frame order theory.</p>
 </div>
 <!-- End SSI header -->
