--- a/faq.html
+++ b/faq.html
@@ -38,7 +38,7 @@
 
      <h3>How do I check out a relax source code branch?</h3>
 
-      <p>Sometimes code for new analyses or a new feature is developed within a dedicated branch within the <a href="http://svn.gna.org/viewcvs/relax/">relax repository</a>.  To obtain, for example, the <em>relax_disp</em> relax branch, type:</p>
+      <p>Sometimes code for a new analysis type or a new feature is developed within a dedicated branch within the <a href="http://svn.gna.org/viewcvs/relax/">relax repository</a>.  To obtain for example the incomplete relaxation dispersion relax branch, type:</p>
       <p><em>$ svn co svn://svn.gna.org/svn/relax/relax_disp</em></p>
       <p>or:</p>
       <p><em>$ svn co http://svn.gna.org/svn/relax/relax_disp</em></p>
