Shifted the screenshots into its own webpage http://www.nmr-relax.com/screenshots.html.
The screenshots were originally part of the http://www.nmr-relax.com/features.html page, but are now
separated.  The http://www.nmr-relax.com/screenshots.html page has been also added to the side menu.

--- a/menu.html
+++ b/menu.html
@@ -9,12 +9,13 @@
     <li class="menu_def"><a href="docs.html" title="The internal help system, sample scripts, and the relax manual">Documentation</a></li>
     <li class="menu_def"><a href="download.html" title="Instructions for downloading relax">Download</a></li>
     <li class="menu_def"><a href="communication.html" title="The bug tracker and mailing lists">Communication</a></li>
-    <li class="menu_def"><a href="events.html" title="The material related to events publicizing relax">Events</a></li>
-    <li class="menu_def"><a href="refs.html" title="References for relax">References</a></li>
-    <li class="menu_def"><a href="links.html" title="Where to find relax on the web">Links</a></li>
     <li class="menu_def"><a href="api/" title="The relax internals">API documentation</a></li>
     <li class="menu_def"><a href="devel_platform.html" title="Setting up a development platform">Development platform setup</a></li>
     <li class="menu_def"><a href="faq.html" title="Frequently asked questions (FAQ)">relax FAQ</a></li>
+    <li class="menu_def"><a href="screenshots.html" title="relax GUI screenshots">Screenshots</a></li>
+    <li class="menu_def"><a href="events.html" title="The material related to events publicizing relax">Events</a></li>
+    <li class="menu_def"><a href="refs.html" title="References for relax">References</a></li>
+    <li class="menu_def"><a href="links.html" title="Where to find relax on the web">Links</a></li>
 
     <li class="menu_title">relax @ Gna!</li>
     <li class="menu_def"><a href="http://gna.org/projects/relax" title="The Gna! site for the project relax.">The relax project</a></li>
