--- a/features.html
+++ b/features.html
@@ -116,61 +116,8 @@ used as optimisation engines replacing the minimisation algorithms built into re
     <h3>relax GUI</h3>
      <p>To start relax with the graphical interface, type:</p>
      <p><em>$ relax -g</em></p>
+     <p>Some <a href="screenshots.html">screenshots</a> of the GUI in action are available.</p>
 
-     <h4>Screenshots</h4>
-     <p>Some screenshots of the second version of the GUI (for the relax 1.3.14 release) are:</p>
-
-     <table class="screenshot_table">
-      <tr>
-       <td>
-        <a href="images/screenshots/full/start.png"><img src="images/screenshots/small/start.png" alt="Screenshot: Blank GUI."/></a><br/>relax starting interface
-       </td>
-       <td>
-        <a href="images/screenshots/full/analysis_wizard.png"><img src="images/screenshots/small/analysis_wizard.png" alt="Screenshot: Analysis wizard."/></a><br/>The analysis selection wizard
-       </td>
-       <td>
-        <a href="images/screenshots/full/analysis_noe.png"><img src="images/screenshots/small/analysis_noe.png" alt="Screenshot: Steady-state NOE tab."/></a><br/>Steady-state NOE analysis
-       </td>
-      </tr>
-      <tr>
-       <td>
-        <a href="images/screenshots/full/analysis_r1.png"><img src="images/screenshots/small/analysis_r1.png" alt="Screenshot: R1 tab."/></a><br/>R<sub>1</sub> analysis
-       </td>
-       <td>
-        <a href="images/screenshots/full/analysis_r2.png"><img src="images/screenshots/small/analysis_r2.png" alt="Screenshot: R2 tab."/></a><br/>R<sub>2</sub> analysis
-       </td>
-       <td>
-        <a href="images/screenshots/full/analysis_mf.png"><img src="images/screenshots/small/analysis_mf.png" alt="Screenshot: Model-free tab."/></a><br/>Model-free analysis
-       </td>
-      </tr>
-      <tr>
-       <td>
-        <a href="images/screenshots/full/relax_controller.png"><img src="images/screenshots/small/relax_controller.png" alt="Screenshot: relax controller."/></a><br/>The relax controller
-       </td>
-       <td>
-        <a href="images/screenshots/full/spin_viewer.png"><img src="images/screenshots/small/spin_viewer.png" alt="Screenshot: Spin viewer window."/></a><br/>Spin viewer window
-       </td>
-       <td>
-        <a href="images/screenshots/full/results_viewer.png"><img src="images/screenshots/small/results_viewer.png" alt="Screenshot: Results viewer window."/></a><br/>Results viewer window
-       </td>
-      </tr>
-      <tr>
-       <td>
-        <a href="images/screenshots/full/pipe_editor.png"><img src="images/screenshots/small/pipe_editor.png" alt="Screenshot: Pipe editor window."/></a><br/>Pipe editor window
-       </td>
-       <td>
-        <a href="images/screenshots/full/relax_prompt.png"><img src="images/screenshots/small/relax_prompt.png" alt="Screenshot: relax prompt window."/></a><br/>relax prompt window
-       </td>
-       <td>
-        <a href="images/screenshots/full/about_gui.png"><img src="images/screenshots/small/about_gui.png" alt="Screenshot: About GUI screen."/></a><br/>About GUI screen
-       </td>
-      </tr>
-      <tr>
-       <td>
-        <a href="images/screenshots/full/about_relax.png"><img src="images/screenshots/small/about_relax.png" alt="Screenshot: About relax screen."/></a><br/>About relax screen
-       </td>
-      </tr>
-     </table>
   </div>
 
  </div>
