--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 -->
 
 <head>
-  <title>relax - NMR molecular dynamics analysis</title>
+  <title>relax - Model-free, NMR relaxation (R1, R2, NOE), reduced spectral density mapping, N-state models, and frame order theory analyses</title>
   <!--#include virtual="head.html" -->
 </head>
 
