--- a/screenshots.html
+++ b/screenshots.html
@@ -27,7 +27,18 @@
  <div class="main_box">
   <h1>Screenshots</h1>
 
-   <h2>GUI screenshots</h2>
+   <h2>Prompt UI screenshots</h2>
+     <p>Some screenshots of the prompt UI are:</p>
+
+     <table class="screenshot_table">
+      <tr>
+       <td>
+        <a href="images/screenshots/full/prompt_ui.png"><img src="images/screenshots/small/prompt_ui.png" alt="Screenshot: relax prompt UI."/></a><br/>relax prompt UI (GNU/Linux)
+       </td>
+      </tr>
+     </table>
+
+    <h2>GUI screenshots</h2>
      <p>Some screenshots of the second version of the GUI (for the relax 1.3.14 release) are:</p>
 
      <table class="screenshot_table">
