Editing of the screenshot captions of http://www.nmr-relax.com/screenshots.html.

--- a/screenshots.html
+++ b/screenshots.html
@@ -33,7 +33,7 @@
      <table class="screenshot_table">
       <tr>
        <td>
-        <a href="images/screenshots/full/prompt_ui.png"><img src="images/screenshots/small/prompt_ui.png" alt="Screenshot: relax prompt UI."/></a><br/>relax prompt UI (GNU/Linux)
+        <a href="images/screenshots/full/prompt_ui.png"><img src="images/screenshots/small/prompt_ui.png" alt="Screenshot: relax prompt UI."/></a><br/>GNU/Linux (Konsole)
        </td>
       </tr>
      </table>
