--- a/screenshots.html
+++ b/screenshots.html
@@ -14,7 +14,7 @@
 -->
 
 <head>
-  <title>relax features - Model-free, RMSD, R1, R2, NOE, Consistency testing, Frame order, N-state model</title>
+  <title>relax screenshots</title>
   <!--#include virtual="head.html" -->
 </head>
 
