--- a/menu.html
+++ b/menu.html
@@ -10,9 +10,9 @@
     <li class="menu_def"><a href="download.html" title="Instructions for downloading relax">Download</a></li>
     <li class="menu_def"><a href="communication.html" title="The bug tracker and mailing lists">Communication</a></li>
     <li class="menu_def"><a href="api/" title="The relax internals">API documentation</a></li>
-    <li class="menu_def"><a href="devel_platform.html" title="Setting up a development platform">Development platform setup</a></li>
-    <li class="menu_def"><a href="faq.html" title="Frequently asked questions (FAQ)">relax FAQ</a></li>
     <li class="menu_def"><a href="screenshots.html" title="relax GUI screenshots">Screenshots</a></li>
+    <li class="menu_def"><a href="faq.html" title="Frequently asked questions (FAQ)">FAQ</a></li>
+    <li class="menu_def"><a href="devel_platform.html" title="Setting up a development platform">Development platform setup</a></li>
     <li class="menu_def"><a href="events.html" title="The material related to events publicizing relax">Events</a></li>
     <li class="menu_def"><a href="refs.html" title="References for relax">References</a></li>
     <li class="menu_def"><a href="links.html" title="Where to find relax on the web">Links</a></li>
