--- a/screenshots.html
+++ b/screenshots.html
@@ -28,7 +28,8 @@
   <h1>Screenshots</h1>
 
    <h2>Prompt UI screenshots</h2>
-     <p>Some screenshots of the prompt UI are:</p>
+
+    <h3>relax 1.3.14</h3>
 
      <table class="screenshot_table">
       <tr>
@@ -38,8 +39,9 @@
       </tr>
      </table>
 
-    <h2>GUI screenshots</h2>
-     <p>Some screenshots of the second version of the GUI (for the relax 1.3.14 release) are:</p>
+   <h2>GUI screenshots</h2>
+
+    <h3>relax 1.3.14</h3>
 
      <table class="screenshot_table">
       <tr>
