--- a/screenshots.html
+++ b/screenshots.html
@@ -31,6 +31,8 @@
 
     <h3>relax 1.3.14</h3>
 
+    <p>The following are screenshots of relax 1.3.14 in the <a href="features.html#UI">prompt UI mode</a> on different operating systems:</p>
+
      <table class="screenshot_table">
       <tr>
        <td>
@@ -45,6 +47,8 @@
    <h2>GUI screenshots</h2>
 
     <h3>relax 1.3.14</h3>
+
+    <p>The following are screenshots of relax 1.3.14 in <a href="features.html#UI">GUI mode</a> on GNU/Linux (specifically <a href="http://www.mageia.org">Mageia 1)</a>, showing the different GUI elements and features.</p>
 
      <table class="screenshot_table">
       <tr>
