Updated the prompt UI screenshot descriptions (http://www.nmr-relax.com/screenshots.html).

--- a/screenshots.html
+++ b/screenshots.html
@@ -36,10 +36,10 @@
      <table class="screenshot_table">
       <tr>
        <td>
-        <a href="images/screenshots/full/prompt_ui_mageia1.png"><img src="images/screenshots/small/prompt_ui_mageia1.png" alt="Screenshot: relax prompt UI."/></a><br/>GNU/Linux - <a href="http://www.mageia.org">Mageia 1</a> (Konsole)
+        <a href="images/screenshots/full/prompt_ui_mageia1.png"><img src="images/screenshots/small/prompt_ui_mageia1.png" alt="Screenshot: relax prompt UI."/></a><br/>GNU/Linux - <a href="http://www.mageia.org">Mageia 1</a> (konsole)
        </td>
        <td>
-        <a href="images/screenshots/full/prompt_ui_win2000.png"><img src="images/screenshots/small/prompt_ui_win2000.png" alt="Screenshot: relax prompt UI."/></a><br/>Windows 2000
+        <a href="images/screenshots/full/prompt_ui_win2000.png"><img src="images/screenshots/small/prompt_ui_win2000.png" alt="Screenshot: relax prompt UI."/></a><br/>Windows 2000 (cmd - command shell)
        </td>
       </tr>
      </table>
