Better layout of the screenshots at http://www.nmr-relax.com/screenshots.html.

--- a/screenshots.html
+++ b/screenshots.html
@@ -35,11 +35,13 @@
 
      <table class="screenshot_table">
       <tr>
-       <td>
+       <td class="screenshot_td">
         <a href="images/screenshots/full/prompt_ui_mageia1.png"><img src="images/screenshots/small/prompt_ui_mageia1.png" alt="Screenshot: relax prompt UI."/></a><br/>GNU/Linux - <a href="http://www.mageia.org">Mageia 1</a> (konsole)
        </td>
-       <td>
+       <td class="screenshot_td">
         <a href="images/screenshots/full/prompt_ui_win2000.png"><img src="images/screenshots/small/prompt_ui_win2000.png" alt="Screenshot: relax prompt UI."/></a><br/>Windows 2000 (cmd - command shell)
+       </td>
+       <td class="screenshot_td">
        </td>
       </tr>
      </table>
@@ -52,52 +54,56 @@
 
      <table class="screenshot_table">
       <tr>
-       <td>
+       <td class="screenshot_td">
         <a href="images/screenshots/full/start.png"><img src="images/screenshots/small/start.png" alt="Screenshot: Blank GUI."/></a><br/>relax starting interface
        </td>
-       <td>
+       <td class="screenshot_td">
         <a href="images/screenshots/full/analysis_wizard.png"><img src="images/screenshots/small/analysis_wizard.png" alt="Screenshot: Analysis wizard."/></a><br/>The analysis selection wizard
        </td>
-       <td>
+       <td class="screenshot_td">
         <a href="images/screenshots/full/analysis_noe.png"><img src="images/screenshots/small/analysis_noe.png" alt="Screenshot: Steady-state NOE tab."/></a><br/>Steady-state NOE analysis
        </td>
       </tr>
       <tr>
-       <td>
+       <td class="screenshot_td">
         <a href="images/screenshots/full/analysis_r1.png"><img src="images/screenshots/small/analysis_r1.png" alt="Screenshot: R1 tab."/></a><br/>R<sub>1</sub> analysis
        </td>
-       <td>
+       <td class="screenshot_td">
         <a href="images/screenshots/full/analysis_r2.png"><img src="images/screenshots/small/analysis_r2.png" alt="Screenshot: R2 tab."/></a><br/>R<sub>2</sub> analysis
        </td>
-       <td>
+       <td class="screenshot_td">
         <a href="images/screenshots/full/analysis_mf.png"><img src="images/screenshots/small/analysis_mf.png" alt="Screenshot: Model-free tab."/></a><br/>Model-free analysis
        </td>
       </tr>
       <tr>
-       <td>
+       <td class="screenshot_td">
         <a href="images/screenshots/full/relax_controller.png"><img src="images/screenshots/small/relax_controller.png" alt="Screenshot: relax controller."/></a><br/>The relax controller
        </td>
-       <td>
+       <td class="screenshot_td">
         <a href="images/screenshots/full/spin_viewer.png"><img src="images/screenshots/small/spin_viewer.png" alt="Screenshot: Spin viewer window."/></a><br/>Spin viewer window
        </td>
-       <td>
+       <td class="screenshot_td">
         <a href="images/screenshots/full/results_viewer.png"><img src="images/screenshots/small/results_viewer.png" alt="Screenshot: Results viewer window."/></a><br/>Results viewer window
        </td>
       </tr>
       <tr>
-       <td>
+       <td class="screenshot_td">
         <a href="images/screenshots/full/pipe_editor.png"><img src="images/screenshots/small/pipe_editor.png" alt="Screenshot: Pipe editor window."/></a><br/>Pipe editor window
        </td>
-       <td>
+       <td class="screenshot_td">
         <a href="images/screenshots/full/relax_prompt.png"><img src="images/screenshots/small/relax_prompt.png" alt="Screenshot: relax prompt window."/></a><br/>relax prompt window
        </td>
-       <td>
+       <td class="screenshot_td">
         <a href="images/screenshots/full/about_gui.png"><img src="images/screenshots/small/about_gui.png" alt="Screenshot: About GUI screen."/></a><br/>About GUI screen
        </td>
       </tr>
       <tr>
-       <td>
+       <td class="screenshot_td">
         <a href="images/screenshots/full/about_relax.png"><img src="images/screenshots/small/about_relax.png" alt="Screenshot: About relax screen."/></a><br/>About relax screen
+       </td>
+       <td class="screenshot_td">
+       </td>
+       <td class="screenshot_td">
        </td>
       </tr>
      </table>
