--- a/download.html
+++ b/download.html
@@ -112,7 +112,9 @@
 <!-- MS Windows -->
     <div id="MS_Windows" class="main_h2">
       <h2>MS Windows</h2>
-      <p>The pre-compiled binary release for 32 bit Windows can be downloaded from the link below.</p>
+      <p>The pre-compiled binary release for 32 bit Windows can be downloaded from the link below.  These have been compiled for Python 2.7 therefore, if there are problems with the compiled C modules and the command:</p>
+      <p><em>$ relax --info</em><p>
+      <p>says that the C modules are not installed, please install Python 2.7.
 
 <table cellspacing="10">
   <tbody>
@@ -133,7 +135,7 @@
 
         <h3>Dependencies</h3>
           <ul class="main_ul">
-            <li><a href="http://python.org">Python</a> &gt;= 2.5 (excluding &gt;= 3.0): <a href="http://www.python.org/ftp/python/2.6.6/python-2.6.6.msi">python-2.6.6.msi</a></li>
+            <li><a href="http://python.org">Python</a> &gt;= 2.5 (excluding &gt;= 3.0, 2.7 recommended): <a href="http://www.python.org/ftp/python/2.7.2/python-2.6.6.msi">python-2.7.2.msi</a></li>
             <li><a href="http://numpy.scipy.org/">NumPy</a> &gt;= 1.0.4: <a  href="http://sourceforge.net/projects/numpy/files/NumPy/">NumPy downloads</a></li>
             <li><a href="http://www.scipy.org/">SciPy</a> (optional) &gt;= 0.7.1: <a  href="http://sourceforge.net/projects/scipy/files/scipy/">SciPy downloads</a></li>
             <li><a href="http://ipython.scipy.org/moin/PyReadline/Intro">pyreadline</a> &gt;= 1.3: <a href="http://launchpad.net/pyreadline/1.5/1.5/+download/pyreadline-1.5-win32-setup.exe">pyreadline-1.5-win32-setup.exe</a></li>
