Added Windows Vista screenshots of the prompt UI (http://www.nmr-relax.com/screenshots.html).
This is using the Windows Powershell.

--- a/screenshots.html
+++ b/screenshots.html
@@ -39,9 +39,10 @@
         <a href="images/screenshots/full/prompt_ui_mageia1.png"><img src="images/screenshots/small/prompt_ui_mageia1.png" alt="Screenshot: relax prompt UI."/></a><br/>GNU/Linux - <a href="http://www.mageia.org">Mageia 1</a> (konsole)
        </td>
        <td class="screenshot_td">
-        <a href="images/screenshots/full/prompt_ui_win2000.png"><img src="images/screenshots/small/prompt_ui_win2000.png" alt="Screenshot: relax prompt UI."/></a><br/>Windows 2000 (cmd - command shell)
+        <a href="images/screenshots/full/prompt_ui_win2000.png"><img src="images/screenshots/small/prompt_ui_win2000.png" alt="Screenshot: relax prompt UI."/></a><br/>Windows 2000 (cmd)
        </td>
        <td class="screenshot_td">
+        <a href="images/screenshots/full/prompt_ui_win_vista.png"><img src="images/screenshots/small/prompt_ui_win_vista.png" alt="Screenshot: relax prompt UI."/></a><br/>Windows Vista (powershell)
        </td>
       </tr>
      </table>
