Fixed the ID attribute of the Bieri et al., 2011 reference.
This is for the link (http://www.nmr-relax.com/refs.html#Bieri11).

--- a/refs.html
+++ b/refs.html
@@ -37,7 +37,7 @@
 
     <h3>relax GUI</h3>
     <ul class="ref_ul">
-     <li class="ref_li" id="Bieri">Bieri M., d'Auvergne E. J., Gooley P. R. (2011).  relaxGUI: a new software for fast and simple NMR relaxation data analysis and calculation of ps-ns and &#956;s motion of proteins. <em>J. Biomol. NMR</em>, <strong>50</strong>(2), 147-155. (<a href="http://dx.doi.org/10.1007/s10858-011-9509-1">abstract</a>)</li>
+     <li class="ref_li" id="Bieri11">Bieri M., d'Auvergne E. J., Gooley P. R. (2011).  relaxGUI: a new software for fast and simple NMR relaxation data analysis and calculation of ps-ns and &#956;s motion of proteins. <em>J. Biomol. NMR</em>, <strong>50</strong>(2), 147-155. (<a href="http://dx.doi.org/10.1007/s10858-011-9509-1">abstract</a>)</li>
     </ul>
   </div>
 
