Added Mac OS X 10.6 screenshots of the prompt UI (for http://www.nmr-relax.com/screenshots.html).

--- a/screenshots.html
+++ b/screenshots.html
@@ -45,6 +45,14 @@
         <a href="images/screenshots/full/prompt_ui_win_vista.png"><img src="images/screenshots/small/prompt_ui_win_vista.png" alt="Screenshot: relax prompt UI."/></a><br/>Windows Vista (powershell)
        </td>
       </tr>
+      <tr>
+       <td class="screenshot_td">
+        <a href="images/screenshots/full/prompt_ui_mac_10_6.png"><img src="images/screenshots/small/prompt_ui_mac_10_6.png" alt="Screenshot: relax prompt UI."/></a><br/>Mac OS X 10.6 Snow Leopard (terminal)
+       </td>
+       <td class="screenshot_td">
+       </td>
+       <td class="screenshot_td">
+       </td>
      </table>
 
    <h2>GUI screenshots</h2>
