--- a/screenshots.html
+++ b/screenshots.html
@@ -59,7 +59,7 @@
 
     <h3>relax 1.3.14</h3>
 
-    <p>The following are screenshots of <a href="download.html#All_releases">relax 1.3.14</a> in <a href="features.html#UI">GUI mode</a> on GNU/Linux (specifically <a href="http://www.mageia.org">Mageia 1)</a>, showing the different GUI elements and features.</p>
+    <p>The following are screenshots of <a href="download.html#All_releases">relax 1.3.14</a> in <a href="features.html#UI">GUI mode</a> , showing the different GUI elements and features.  These have been taken on GNU/Linux, specifically <a href="http://www.mageia.org">Mageia 1</a>.  The relax GUI will adapt to the native look and feel of the host operating system, so will have a slightly different appearance on MS Windows and Mac OS X.</p>
 
      <table class="screenshot_table">
       <tr>
