--- a/screenshots.html
+++ b/screenshots.html
@@ -39,10 +39,10 @@
         <a href="images/screenshots/full/prompt_ui_mageia1.png"><img src="images/screenshots/small/prompt_ui_mageia1.png" alt="Screenshot: relax prompt UI."/></a><br/>GNU/Linux - <a href="http://www.mageia.org">Mageia 1</a> (konsole)
        </td>
        <td class="screenshot_td">
-        <a href="images/screenshots/full/prompt_ui_win2000.png"><img src="images/screenshots/small/prompt_ui_win2000.png" alt="Screenshot: relax prompt UI."/></a><br/>Windows 2000 (cmd)
+        <a href="images/screenshots/full/prompt_ui_win2000.png"><img src="images/screenshots/small/prompt_ui_win2000.png" alt="Screenshot: relax prompt UI."/></a><br/>MS Windows 2000 (cmd)
        </td>
        <td class="screenshot_td">
-        <a href="images/screenshots/full/prompt_ui_win_vista.png"><img src="images/screenshots/small/prompt_ui_win_vista.png" alt="Screenshot: relax prompt UI."/></a><br/>Windows Vista (powershell)
+        <a href="images/screenshots/full/prompt_ui_win_vista.png"><img src="images/screenshots/small/prompt_ui_win_vista.png" alt="Screenshot: relax prompt UI."/></a><br/>MS Windows Vista (powershell)
        </td>
       </tr>
       <tr>
