--- a/header.html
+++ b/header.html
@@ -5,6 +5,6 @@
 
 <div class="header">
   <p id="headline"><strong>relax</strong> - Molecular dynamics by NMR data analysis</p>
-  <p id="tagline">Supported analyses: Model-free, NMR relaxation (R<sub>1</sub>, R<sub>2</sub>, NOE), reduced spectral density mapping, N-state models, frame order theory.</p>
+  <p id="tagline">Analysis software for: Model-free, NMR relaxation (R<sub>1</sub>, R<sub>2</sub>, NOE), reduced spectral density mapping, N-state models, frame order theory.</p>
 </div>
 <!-- End SSI header -->
