Updated the download page (http://www.nmr-relax.com/download.html) for relax 1.3.14.
This is currently only for the source releases and 64-bit Gnu/Linux.

--- a/download.html
+++ b/download.html
@@ -48,7 +48,7 @@
   <div id="Current_release" class="main_box">
     <h1>Current release</h1>
 
-      <p>The current stable release is relax version 1.3.13.</p>
+      <p>The current stable release is relax version 1.3.14.</p>
 
       <p>relax binaries have been pre-compiled for a number of computer architectures.  These are based on Python 2.5 or 2.6 but can work with other Python versions on certain operating systems and certain architectures.  However if not, or if binaries for your system do not exist, please download the source release (the compilation of binaries is not a pre-requesite for using relax).  Note that some binary distribution files may not correspond to the most up to date version of relax.  If so, please download the up-to-date source release instead.  If you would like to contribute binary packages for your specific architecture, please read the 'Open source infrastructure' chapter of the relax manual for details.</p>
 
@@ -88,10 +88,10 @@
       <td>16057986</td>
     </tr>
     <tr>
-      <td><a href="http://download.gna.org/relax/relax-1.3.13.GNU-Linux.x86_64.tar.bz2" title="relax">relax-1.3.13.GNU-Linux.x86_64.tar.bz2</a></td>
-      <td><tt><small>541f901a483b32862bbe98d3c112317b</small></tt></td>
-      <td><a href="http://download.gna.org/relax/relax-1.3.13.GNU-Linux.x86_64.tar.bz2.sig" title="relax GPG signature">signature</a></td>
-      <td>15997206</td>
+      <td><a href="http://download.gna.org/relax/relax-1.3.14.GNU-Linux.x86_64.tar.bz2" title="relax">relax-1.3.14.GNU-Linux.x86_64.tar.bz2</a></td>
+      <td><tt><small>26c9231b6c0932856c6208b9552afaf4</small></tt></td>
+      <td><a href="http://download.gna.org/relax/relax-1.3.14.GNU-Linux.x86_64.tar.bz2.sig" title="relax GPG signature">signature</a></td>
+      <td>16012594</td>
     </tr>
   </tbody>
 </table>
@@ -213,16 +213,16 @@
       <td><strong>File size (bytes)</strong></td>
     </tr>
     <tr>
-      <td><a href="http://download.gna.org/relax/relax-1.3.13.src.tar.bz2" title="relax">relax-1.3.13.src.tar.bz2</a></td>
-      <td><tt><small>b6c41cef7055bc0f5bec0e0b66c51cb8</small></tt></td>
-      <td><a href="http://download.gna.org/relax/relax-1.3.13.src.tar.bz2.sig" title="relax GPG signature">signature</a></td>
-      <td>15985739</td>
+      <td><a href="http://download.gna.org/relax/relax-1.3.14.src.tar.bz2" title="relax">relax-1.3.14.src.tar.bz2</a></td>
+      <td><tt><small>d8bb7eebfa4112f95ade4e22c99899a7</small></tt></td>
+      <td><a href="http://download.gna.org/relax/relax-1.3.14.src.tar.bz2.sig" title="relax GPG signature">signature</a></td>
+      <td>16006725</td>
     </tr>
     <tr>
-      <td><a href="http://download.gna.org/relax/relax-1.3.13.src.zip" title="relax">relax-1.3.13.src.zip</a></td>
-      <td><tt><small>1af666b0ca9c795f88e0d1227b5c4c10</small></tt></td>
-      <td><a href="http://download.gna.org/relax/relax-1.3.13.src.zip.sig" title="relax GPG signature">signature</a></td>
-      <td>18324405</td>
+      <td><a href="http://download.gna.org/relax/relax-1.3.14.src.zip" title="relax">relax-1.3.14.src.zip</a></td>
+      <td><tt><small>b9842041775ae890dc8c3f884410116c</small></tt></td>
+      <td><a href="http://download.gna.org/relax/relax-1.3.14.src.zip.sig" title="relax GPG signature">signature</a></td>
+      <td>18340969</td>
     </tr>
   </tbody>
 </table>
@@ -310,6 +310,26 @@
       <td><strong>MD5 checksum</strong></td>
       <td><strong>GPG signature</strong></td>
       <td><strong>File size (bytes)</strong></td>
+    </tr>
+
+    <tr><td><em>Version 1.3.14 (2012-03-19)</em></td></tr>
+    <tr>
+      <td><a href="http://download.gna.org/relax/relax-1.3.14.GNU-Linux.x86_64.tar.bz2" title="relax">relax-1.3.14.GNU-Linux.x86_64.tar.bz2</a></td>
+      <td><tt><small>26c9231b6c0932856c6208b9552afaf4</small></tt></td>
+      <td><a href="http://download.gna.org/relax/relax-1.3.14.GNU-Linux.x86_64.tar.bz2.sig" title="relax GPG signature">signature</a></td>
+      <td>16012594</td>
+    </tr>
+    <tr>
+      <td><a href="http://download.gna.org/relax/relax-1.3.14.src.tar.bz2" title="relax">relax-1.3.14.src.tar.bz2</a></td>
+      <td><tt><small>d8bb7eebfa4112f95ade4e22c99899a7</small></tt></td>
+      <td><a href="http://download.gna.org/relax/relax-1.3.14.src.tar.bz2.sig" title="relax GPG signature">signature</a></td>
+      <td>16006725</td>
+    </tr>
+    <tr>
+      <td><a href="http://download.gna.org/relax/relax-1.3.14.src.zip" title="relax">relax-1.3.14.src.zip</a></td>
+      <td><tt><small>b9842041775ae890dc8c3f884410116c</small></tt></td>
+      <td><a href="http://download.gna.org/relax/relax-1.3.14.src.zip.sig" title="relax GPG signature">signature</a></td>
+      <td>18340969</td>
     </tr>
 
     <tr><td><em>Version 1.3.13 (2011-11-14)</em></td></tr>
