More updates for Python 2.7 on http://www.nmr-relax.com/download.html.

--- a/download.html
+++ b/download.html
@@ -71,7 +71,7 @@
     <div id="GNU_Linux" class="main_h2">
       <h2>GNU/Linux</h2>
 
-      <p>Pre-compiled binary releases for GNU/Linux can be downloaded for both 32 bit (i686) and 64 bit (x86_64) machines.</p>
+      <p>Pre-compiled binary releases for GNU/Linux can be downloaded for both 32 bit (i686) and 64 bit (x86_64) machines.  These have been compiled for Python 2.7, though should work for versions 2.5 and 2.6.  But if there are problems with the compiled C modules, please either use the <a href="download.html#Source_code_release">source distribution</a> or install Python 2.7.</p>
 
 <table cellspacing="10">
   <tbody>
@@ -99,7 +99,7 @@
         <h3>Dependencies</h3>
           <p>If they exist, please install your distribution specific packages for the following dependencies.</p>
           <ul class="main_ul">
-            <li><a href="http://python.org">Python</a> &gt;= 2.5 (excluding &gt;= 3.0): <a  href="http://www.python.org/ftp/python/2.6.6/Python-2.6.6.tar.bz2">Python-2.6.6.tar.bz2</a></li>
+            <li><a href="http://python.org">Python</a> &gt;= 2.5 (excluding &gt;= 3.0): <a  href="http://www.python.org/ftp/python/2.7.2/Python-2.7.2.tar.bz2">Python-2.7.2.tar.bz2</a></li>
             <li><a href="http://numpy.scipy.org/">NumPy</a> &gt;= 1.0.4: <a  href="http://sourceforge.net/projects/numpy/files/NumPy/">NumPy downloads</a></li>
             <li><a href="http://www.scipy.org/">SciPy</a> (optional) &gt;= 0.7.1: <a  href="http://sourceforge.net/projects/scipy/files/scipy/">SciPy downloads</a></li>
             <li><a href="http://www.wxpython.org/">wxPython</a> (optional) &gt;= 2.8: <a href="http://www.wxpython.org/download.php#stable">wxPython stable downloads</a></li>
@@ -135,7 +135,7 @@
 
         <h3>Dependencies</h3>
           <ul class="main_ul">
-            <li><a href="http://python.org">Python</a> &gt;= 2.5 (excluding &gt;= 3.0, 2.7 recommended): <a href="http://www.python.org/ftp/python/2.7.2/python-2.6.6.msi">python-2.7.2.msi</a></li>
+            <li><a href="http://python.org">Python</a> &gt;= 2.5 (excluding &gt;= 3.0, 2.7 recommended): <a href="http://www.python.org/ftp/python/2.7.2/python-2.7.2.msi">python-2.7.2.msi</a></li>
             <li><a href="http://numpy.scipy.org/">NumPy</a> &gt;= 1.0.4: <a  href="http://sourceforge.net/projects/numpy/files/NumPy/">NumPy downloads</a></li>
             <li><a href="http://www.scipy.org/">SciPy</a> (optional) &gt;= 0.7.1: <a  href="http://sourceforge.net/projects/scipy/files/scipy/">SciPy downloads</a></li>
             <li><a href="http://ipython.scipy.org/moin/PyReadline/Intro">pyreadline</a> &gt;= 1.3: <a href="http://launchpad.net/pyreadline/1.5/1.5/+download/pyreadline-1.5-win32-setup.exe">pyreadline-1.5-win32-setup.exe</a></li>
@@ -186,7 +186,7 @@
 
         <h3>Dependencies</h3>
           <ul class="main_ul">
-            <li><a href="http://python.org">Python</a> &gt;= 2.5 (excluding &gt;= 3.0): <a href="http://www.python.org/ftp/python/2.6.6/python-2.6.6-macosx10.3.dmg">python-2.6.6-macosx10.3.dmg</a></li>
+            <li><a href="http://python.org">Python</a> &gt;= 2.5 (excluding &gt;= 3.0): <a href="http://www.python.org/ftp/python/2.7.2/python-2.7.2-macosx10.3.dmg">python-2.7.2-macosx10.3.dmg</a></li>
             <li><a href="http://numpy.scipy.org/">NumPy</a> &gt;= 1.0.4: <a  href="http://sourceforge.net/projects/numpy/files/NumPy/">NumPy downloads</a></li>
             <li><a href="http://www.scipy.org/">SciPy</a> (optional) &gt;= 0.7.1: <a  href="http://sourceforge.net/projects/scipy/files/scipy/">SciPy downloads</a></li>
             <li><a href="http://www.wxpython.org/">wxPython</a> (optional) &gt;= 2.8: <a href="http://www.wxpython.org/download.php#stable">wxPython stable downloads</a></li>
@@ -230,7 +230,7 @@
 
         <h3>Dependencies</h3>
           <ul class="main_ul">
-            <li><a href="http://python.org">Python</a> &gt;= 2.5 (excluding &gt;= 3.0): <a href="http://www.python.org/download/releases/2.6.6/">Python 2.6.6 release page</a></li>
+            <li><a href="http://python.org">Python</a> &gt;= 2.5 (excluding &gt;= 3.0): <a href="http://www.python.org/download/releases/2.7.2/">Python 2.7.2 release page</a></li>
             <li><a href="http://numpy.scipy.org/">NumPy</a> &gt;= 1.0.4: <a  href="http://sourceforge.net/projects/numpy/files/NumPy/">NumPy downloads</a></li>
             <li><a href="http://www.scipy.org/">SciPy</a> (optional) &gt;= 0.7.1: <a  href="http://sourceforge.net/projects/scipy/files/scipy/">SciPy downloads</a></li>
             <li><a href="http://www.wxpython.org/">wxPython</a> (optional) &gt;= 2.8: <a href="http://www.wxpython.org/download.php#stable">wxPython stable downloads</a></li>
