--- a/download.html
+++ b/download.html
@@ -312,7 +312,7 @@
       <td><strong>File size (bytes)</strong></td>
     </tr>
 
-    <tr><td><em>Version 1.3.14 (2012-03-19)</em></td></tr>
+    <tr><td><em><a href="http://gna.org/forum/forum.php?forum_id=2337">Version 1.3.14</a> (2012-03-19)</em></td></tr>
     <tr>
       <td><a href="http://download.gna.org/relax/relax-1.3.14.GNU-Linux.i686.tar.bz2" title="relax">relax-1.3.14.GNU-Linux.i686.tar.bz2</a></td>
       <td><tt><small>8b654165d9f4c04dcb083e5184ae5b41</small></tt></td>
